Category api refactored
